# maui-nota

./: CMakeLists.txt
src/: CMakeLists.txt  main.cpp  main.qml
src/controllers/: server.cpp  server.h
src/views/: PlacesSidebar.qml  RecentView.qml
src/views/editor/: Editor.qml  EditorLayout.qml  EditorView.qml
src/views/widgets/: DocsBrowser.qml  SettingsDialog.qml  ShortcutsDialog.qml
